# cudaSDR

./: .gitignore  CMakeLists.txt  README.md  analyze_qt6_migration.sh  build.sh  qt6_migration_changes.md  run_cudasdr.sh
Source/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.8e5bf8a  Makefile  README  Source.kdev4  Source.pro  build.sh  cmake_install.cmake  gmon.out  package-lock.json  settings.ini  simple3d  simple3d.cpp  simple3d.moc  simple3d.pro  test3d.cpp  ui_cusdr_display.h  ui_noisefilterwidget.h  ui_setupwidget.h  ui_tx_settings_dialog.h  windowsSettings.ini
Source/.kdev4/: Source.kdev4
Source/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Source/backup/backup_03092025/src/: cusdr_agcWidget.cpp  cusdr_alexAntennaWidget.h  cusdr_alexFilterWidget.cpp  cusdr_alexTabWidget.h  cusdr_colorsWidget.h  cusdr_displayWidget.cpp  cusdr_displayWidget.h  cusdr_extCtrlWidget.cpp  cusdr_fonts.cpp  cusdr_hamDatabase.h  cusdr_hpsdrTabWidget.h  cusdr_hpsdrWidget.cpp  cusdr_mainWidget.cpp  cusdr_mainWidget.h  cusdr_networkWidget.cpp  cusdr_networkWidget.h  cusdr_radioPopupWidget.h  cusdr_radioWidget.cpp  cusdr_receiverWidget.cpp  cusdr_receiverWidget.h  cusdr_server.cpp  cusdr_server.h  cusdr_serverWidget.cpp  cusdr_serverWidget.h  cusdr_transmitTabWidget.h
Source/backup/src/: cusdr_agcWidget.h  cusdr_alexAntennaWidget.cpp  cusdr_alexFilterWidget.h  cusdr_alexTabWidget.cpp  cusdr_colorsWidget.cpp  cusdr_displayTabWidget.cpp  cusdr_displayTabWidget.h  cusdr_extCtrlWidget.h  cusdr_fonts.h  cusdr_hamDatabase.cpp  cusdr_hpsdrTabWidget.cpp  cusdr_hpsdrWidget.h  cusdr_radioParameter.h  cusdr_radioPopupWidget.cpp  cusdr_radioTabWidget.cpp  cusdr_radioTabWidget.h  cusdr_radioWidget.h  cusdr_settings.cpp  cusdr_settings.h  cusdr_transmitOptionsWidget.cpp  cusdr_transmitOptionsWidget.h  cusdr_transmitPAWidget.cpp  cusdr_transmitPAWidget.h  cusdr_transmitTabWidget.cpp  main.cpp
Source/backup/src/AudioEngine/: cusdr_audio_waveform.cpp  cusdr_audio_waveform.h  cusdr_audio_wavfile.h  cusdr_fspectrum.cpp  cusdr_fspectrum.h  cusdr_iambic.h
Source/backup/src/DataEngine/: cusdr_WidebandProcessor.h  cusdr_dataEngine.cpp  cusdr_dataEngine.h  cusdr_dataIO.h  cusdr_discoverer.h  cusdr_receiver.cpp  cusdr_receiver.h  datatypes.h  soundout.cpp
Source/backup/src/GL/: cusdr_oglDisplayPanel.cpp  cusdr_oglDisplayPanel.h  cusdr_oglDistancePanel.cpp  cusdr_oglDistancePanel.h  cusdr_oglInfo.h  cusdr_oglReceiverPanel.cpp  cusdr_oglText.cpp  cusdr_oglUtils.h  cusdr_oglWidebandPanel.cpp
Source/backup/src/QtDSP/: qtdsp_qComplex.h
Source/backup/src/UI/: cusdr_setupwidget.cpp  cusdr_setupwidget.h  radio_widget.cpp  setupwidget.cpp  tx_settings_dialog.cpp
Source/backup/src/Util/: cusdr_buttons.cpp  cusdr_image.cpp  cusdr_image.h  cusdr_imageblur.cpp  cusdr_painter.h  cusdr_queue.h  cusdr_splash.cpp  cusdr_splash.h  cusdr_styles.h
Source/build_kdevelop/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  settings.ini  ui_noisefilterwidget.h  windowsSettings.ini
Source/build_kdevelop/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Source/build_kdevelop/cudasdr_autogen/: deps
Source/build_kdevelop/cudasdr_autogen/BBNFRHYJQ7/: moc_cusdr_buttons.cpp  moc_cusdr_buttons.cpp.d  moc_cusdr_colorTriangle.cpp  moc_cusdr_colorTriangle.cpp.d  (+4 more)
Source/res/: cusdr.qrc  cusdr_stylesheet.qss
Source/src/: cusdr_3DOptionsWidget.cpp  cusdr_3DOptionsWidget.h  cusdr_agcWidget.cpp  cusdr_alexAntennaWidget.cpp  cusdr_alexFilterWidget.cpp  cusdr_colorsWidget.cpp  cusdr_colorsWidget.h  cusdr_displayTabWidget.cpp  cusdr_displayTabWidget.h  cusdr_displayWidget.cpp  cusdr_displayWidget.h  cusdr_extCtrlWidget.cpp  cusdr_fonts.cpp  cusdr_hamDatabase.h  cusdr_hpsdrTabWidget.cpp  cusdr_hpsdrTabWidget.h  cusdr_hpsdrWidget.cpp  cusdr_hpsdrWidget.h  cusdr_mainWidget.cpp  cusdr_mainWidget.h  cusdr_networkWidget.cpp  cusdr_radioPopupWidget.cpp  cusdr_radioPopupWidget.h  cusdr_radioTabWidget.cpp  cusdr_radioWidget.cpp  cusdr_serverWidget.cpp  cusdr_settings.cpp  cusdr_settings.h  cusdr_transmitOptionsWidget.cpp  cusdr_transmitOptionsWidget.h  cusdr_transmitPAWidget.cpp  cusdr_transmitTabWidget.cpp  cusdr_transmitTabWidget.h  main.cpp  rxpanel.bak
Source/src/AudioEngine/: audioinput.h  audiooutputmanager.h  cusdr_audio_input.cpp  cusdr_audio_input.h  cusdr_audio_settingsdialog.cpp  cusdr_audio_settingsdialog.h  cusdr_iambic.cpp  cusdr_iambic.h
Source/src/DataEngine/: CProtocol1.cpp  CProtocol1.h  CProtocol2.cpp  CProtocol2.h  IDeviceDiscoverer.h  IFrameDecoder.h  IHPSDRProtocol.h  IHardwareIO.h  Protocol1FrameDecoder.cpp  Protocol1FrameDecoder.h  Protocol2Handler.cpp  Protocol2Handler.h  SoapySDRHandler.cpp  SoapySDRHandler.h  cusdr_WidebandProcessor.cpp  cusdr_dataEngine.cpp  cusdr_dataEngine.h  cusdr_dataIO.cpp  cusdr_dataIO.h  cusdr_discoverer.cpp  cusdr_discoverer.h  cusdr_receiver.cpp  cusdr_receiver.h  cusdr_transmitter.cpp  cusdr_transmitter.h  receiveraudiooutput.cpp  receiveraudiooutput.h  soundout.cpp  soundout.h
Source/src/GL/: GLWaterfall.cpp  GLWaterfall.h  cusdr_meshGeneratorWorker.cpp  cusdr_meshGeneratorWorker.h  cusdr_ogl3DPanel.cpp  cusdr_ogl3DPanel.h  cusdr_oglDisplayPanel.cpp  cusdr_oglDisplayPanel.h  cusdr_oglDistancePanel.cpp  cusdr_oglDistancePanel.h  cusdr_oglReceiverPanel.cpp  cusdr_oglReceiverPanel.h  cusdr_oglText.cpp  cusdr_oglText.h  cusdr_oglUtils.h  cusdr_oglWidebandPanel.cpp  cusdr_oglWidebandPanel.h  rxpan.bak
Source/src/QtWDSP/: qtwdsp_dspEngine.cpp  qtwdsp_dspEngine.cpp.save  qtwdsp_dspEngine.h
Source/src/UI/: audio_dialog.cpp  audio_dialog.h  audio_dialog.ui  basewidget.cpp  basewidget.h  cusdr_display.ui  cusdr_setupwidget.cpp  cusdr_setupwidget.h  cusdr_setupwidget.ui  mini_mode_widget.cpp  noisefilterwidget.cpp  noisefilterwidget.h  noisefilterwidget.ui  radio_widget.cpp  radio_widget.h  setupwidget.ui  tx_settings_dialog.cpp  tx_settings_dialog.h  tx_settings_dialog.ui
Source/src/Util/: cusdr_buttons.cpp  cusdr_buttons.h  cusdr_colorTriangle.cpp  cusdr_cpuUsage.cpp  cusdr_painter.cpp  cusdr_splash.cpp  cusdr_splash.h  cusdr_styles.h  qcircularbuffer.h
(+478 files in other folders)
